# xllm

./: .gitmodules  CMakeLists.txt  setup.py
docs/zh/design/: layer_abstraction_for_multi_backend.md
xllm/cc_api/: internal.h
xllm/cc_api/examples/: multiple_llm_instances.cpp  service_request.cpp  start-llm-instance.sh
xllm/core/common/: global_flags.cpp  global_flags.h  help_formatter.h
xllm/core/distributed_runtime/: collective_service.cpp  dist_manager.cpp  dist_manager.h  llm_engine.cpp  worker_server.cpp  worker_server.h
xllm/core/framework/: CMakeLists.txt
xllm/core/layers/: CMakeLists.txt  attention_mask.cpp  attention_mask.h  base_layer.cpp  base_layer.h  column_parallel_linear.h  deepseek_v2_decoder_layer.h  i_backend_strategy.h  i_decoder_layer.h  layer_forward_context.h  layer_init_context.h  layer_registry.h  (+12 more)
xllm/core/platform/: CMakeLists.txt  backend_capabilities.h  backend_capabilities_provider.cpp  backend_capabilities_provider.h  buffer.h  device_context.h  device_context_factory.cpp  device_context_factory.h  device_type.h  layer_synchronizer.h  layer_synchronizer_factory.cpp  layer_synchronizer_factory.h  memory_direction.h  workspace.h
xllm/core/platform/npu/: CMakeLists.txt  npu_buffer.cpp  npu_buffer.h  npu_device_context.cpp  npu_device_context.h  npu_layer_synchronizer.cpp  npu_layer_synchronizer.h  npu_workspace.cpp  npu_workspace.h
xllm/models/: deepseek_v2.h  deepseek_v2_mtp.h  llama.h  minicpmv.h  qwen2.h  qwen2_5_vl.h  qwen3.h  qwen3_embedding.h  qwen3_moe.h  qwen_base.h
xllm/server/: xllm_server.cpp  xllm_server_registry.cpp
(+52 files in other folders)
